# zero2prod

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  configuration.yaml  docker-compose.yml  rustfmt.toml
.docker/pgadmin/: servers.json
.github/workflows/: rust.yml
configuration/: base.yaml
migrations/: 20220420193747_add_status_to_subscriptions.sql  20220420195716_create_subscriptions_tokens_table.sql
src/: config.rs  configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/db/: mod.rs  subscription_queries.rs  transaction.rs  types.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs  subscription_status.rs
src/events/: mod.rs  subscription_created.rs
src/handlers/: confirm_subscription.rs  mod.rs  save_new_subscriber.rs
src/listeners/: init.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: app.rs  common.rs  health_check.rs  test_email_client.rs  test_health_check.rs  test_subscriber_email.rs  test_subscriber_name.rs  test_subscriptions.rs  test_subscriptions_complete_flows.rs  test_subscriptions_confirm.rs
