[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0"
config = "0.13.0"
chrono = "0.4.19"
serde = { version = "1.0.136", features = ["derive"] }
sqlx = { version = "0.5.11", features = ["postgres", "runtime-actix-native-tls", "uuid", "time", "chrono"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8.2", features = ["v4"] }

[dev-dependencies]
reqwest = "0.11"
