[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0"
anyhow = "1.0.56"
async-nats = "0.10.1"
chrono = "0.4.19"
derive_more = "0.99.17"
envy = "0.4.2"
lazy_static = "1.4.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "1.0.31"
tokio = { version = "1.18.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.32", features = ["log"] }
tracing-actix-web = "0.5.1"
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3.10", features = ["registry", "env-filter"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sqlx = { version = "0.5.13", features = ["postgres", "runtime-actix-native-tls", "uuid", "time", "chrono"] }
validator = "0.14.0"
unicode-segmentation = "1.9.0"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
wiremock = "0.5"

[dev-dependencies]
claim = "0.5.0"
fake = "2.4.3"
once_cell = "1.10.0"
linkify = "0.8"
serial_test = "0.6.0"